agentgateway/httproute-node-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-app-route
  namespace: default
spec:
  parentRefs:
    - name: platform-gateway
      sectionName: http
  hostnames:
    - "*"
  rules:
    - name: primary
      backendRefs:
        - name: node-app-stable
          port: 80
          weight: 100
        - name: node-app-canary
          port: 80
          weight: 0
